--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,16 @@ typings/
 # dotenv environment variables file
 .env
 
+
+.DS_Store
+dist/
+test/unit/coverage
+test/e2e/reports
+selenium-debug.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
